See https://github.com/open-geodata/sp_cetesb_infoaguas/commit/42d9375db9f2b37f9e3c17569b33413bf114dd19 from refs/heads/main

--- a/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
+++ b/_posts/sp_cetesb_infoaguas/2020-01-01-ice.md
@@ -19,9 +19,9 @@ excerpt: O ICE busca indicar a aderência das amostras de qualidade de água rea
 share: false
 related: false
 header:
-  overlay_image: /assets/sp_cetesb_infoaguas/imgs/river-min.jpg
+  overlay_image: /assets/sp_cetesb_infoaguas/imgs/unrecognizable-ecologist-standing-where-sewage.jpg
   overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
-  caption: "Foto: [**Fabricio Macedo**](https://pixabay.com/pt/users/fabriciomacedophotos-328534/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1729544)"
+  caption: "Foto: [**@aleksandarlittlewolf**](https://www.freepik.com/free-photo/unrecognizable-ecologist-standing-where-sewage-waste-water-meets-river-taking-samples-determine-level-contamination-pollution_11138128.htm?query=dirty%20water)"
   actions:
     - label: "Mais informações"
       url: "https://sistemainfoaguas.cetesb.sp.gov.br"
