--- a/_posts/2020-02-28-wms.md
+++ b/_posts/2020-02-28-wms.md
@@ -24,8 +24,7 @@ Os serviços Web Map Service (WMS).
 - [BR ICMBio](http://mapas.icmbio.gov.br/geoserver/ows)
 - Instituto Chico Mendes
 - [BR INDE](https://inde.gov.br/CatalogoGeoservicos)
-
-
+- [BR CNPM (Geonode)](http://geoinfo.cnpm.embrapa.br/layers/geonode:mosaico3)
 
 ### Estado de São Paulo
 
