--- a/_posts/2020-02-28-wms.md
+++ b/_posts/2020-02-28-wms.md
@@ -1,15 +1,6 @@
 ---
 title: "Serviços WMS e WFS"
 tags: [wms, geodata, gis]
-
-#layout: post
-#subtitle: Exercícios e Referências
-#thumbnail-img: /assets/img/posts/wms_icon.png
-#share-img: /assets/img/posts/wms_big.png
-#cover-img: /assets/img/posts/wms_big.png
-#comments: true
-#language: pt-br
-
 ---
 
 Os serviços Web Map Service (WMS).
@@ -42,8 +33,10 @@ Os serviços Web Map Service (WMS).
 - http://geoportal.igc.sp.gov.br:6080/arcgis/services/IGC/GeoPortal_Ortofotos_Mapeamento2010_ImgSrv/ImageServer/WMSServer?
 - http://geoportal.igc.sp.gov.br:6080/arcgis/services/IGC/GeoPortal_Ortofotos_Oeste_2010_ImgSrv/ImageServer/WMSServer?
 
-
-
 ### Estado de de Santa Catarina
 
-- [SC Secretaria de Desenvolvimento Sustentável](http://www.aguas.sc.gov.br/geoserver/ows) 
+- [SC Secretaria de Desenvolvimento Sustentável](http://www.aguas.sc.gov.br/geoserver/ows)
+
+### XZY Services
+
+- https://github.com/geopandas/xyzservices
